# codename-generator

./: .gitattributes  .gitignore  LICENSE  README.de.md  README.md  bootstrap.ps1  bootstrap.sh  compile-linux.sh  compile-macos.sh  compile-win64.ps1  pyproject.toml  run.bat  run.ps1  run.sh  setup.bat  setup.sh  tape.ps1
.github/workflows/: ci.yml  release.yml
demo/: install-wsl.sh  intro.tape  render-wsl.sh
src/codename_generator/: __init__.py  cli.py  effects.py  generator.py  phonetic.py  settings.py  tui.py  wordlist.py
src/codename_generator/data/modifiers/: adjectives.yaml  agents.yaml  verbs.yaml
src/codename_generator/data/themes/: animals.yaml  constellations.yaml  dev.yaml  egyptian-gods.yaml  evocative.yaml  flowers.yaml  gemstones.yaml  greek-gods.yaml  landmarks.yaml  mountains.yaml  mushrooms.yaml  norse-gods.yaml  power-words.yaml  racehorses.yaml  ships.yaml  whisky.yaml  wines.yaml  zodiac.yaml
tests/: test_generator.py  test_phonetic.py  test_settings.py  test_wordlist.py
