[project]
name = "codename-generator"
version = "0.1.0"
description = "Project codename generator with curated themes and phonetic mutations"
readme = "README.md"
authors = [
    { name = "Michael Blaess", email = "mail@michaelblaess.de" }
]
requires-python = ">=3.13"
dependencies = [
    "textual>=0.83",
    "pyyaml>=6.0",
    "pyperclip>=1.9",
    "textual-widgets",
]

[tool.uv.sources]
textual-widgets = { git = "https://github.com/michaelblaess/textual-widgets.git" }

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-pyyaml>=6.0",
    "textual-dev>=1.7",
]

[project.scripts]
codename-generator = "codename_generator.cli:main"
codename = "codename_generator.cli:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.13"

[[tool.mypy.overrides]]
module = ["pyperclip", "textual_widgets", "textual_widgets.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
