[project]
name = "codename-generator"
version = "0.1.1"
description = "Project codename generator with curated themes and phonetic mutations"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Michael Blaess", email = "mail@michaelblaess.de" }
]
keywords = [
    "codename",
    "name-generator",
    "project-name",
    "textual",
    "tui",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
requires-python = ">=3.13"
dependencies = [
    "textual>=0.83",
    "pyyaml>=6.0",
    "textual-widgets",
    "textual-themes",
    "textual-slider>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/michaelblaess/codename-generator"
Repository = "https://github.com/michaelblaess/codename-generator"
Issues = "https://github.com/michaelblaess/codename-generator/issues"

[tool.uv.sources]
textual-widgets = { git = "https://github.com/michaelblaess/textual-widgets.git", tag = "v0.8.0" }
textual-themes = { git = "https://github.com/michaelblaess/textual-themes.git", tag = "v0.2.1" }

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-pyyaml>=6.0",
    "textual-dev>=1.7",
]

[project.scripts]
codename-generator = "codename_generator.cli:main"
codename = "codename_generator.cli:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.13"

[[tool.mypy.overrides]]
module = [
    "textual_widgets",
    "textual_widgets.*",
    "textual_themes",
    "textual_themes.*",
    "textual_slider",
    "textual_slider.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
